--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,7 @@
     <files-path
         name="internal_files"
         path="." />
+    <external-path
+        name="external"
+        path="."/>
 </paths>
